Solved the problem of overflow-y

--- a/movie-app/src/index.css
+++ b/movie-app/src/index.css
@@ -1,7 +1,4 @@
 body {
-  margin: 0;
-  padding: 0;
-  box-sizing: border-box;
   font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", "Roboto", "Oxygen",
     "Ubuntu", "Cantarell", "Fira Sans", "Droid Sans", "Helvetica Neue",
     sans-serif;
@@ -23,6 +20,7 @@ code {
 html,
 body {
   overflow-x: hidden;
+  overflow-y: hidden;
 }
 
 body::-webkit-scrollbar {
